test/invalid-semantics/57551_const_uses_var/const_uses_var.mag
-- Author: 57551, Eduardo Proença

-- `var` can not be assigned to a `const` value

const bad : Int = var x : Int = 1
fun main (_) : Unit -> Unit =
    print(bad)